--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ img{
   width: 100%;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(#515Bd4, #8134AF 15%, #DD2A7B 25%,#FEDA77, #F58529);
+  background: linear-gradient( 45deg, #DD2A7B, #8134AF, #515Bd4, #F58529, #FEDA77 80%);
 }
 .instagram-fone{
   display: flex;
@@ -67,7 +67,7 @@ img{
   background-color: rgba(0, 0, 0, 0.15);
 }
 .input-login::placeholder{
-  color: #fff;
+  color: rgba(0, 0, 0, 0.65);
 }
 #input-button{
   margin: 15px 35px;
@@ -90,6 +90,7 @@ img{
   margin-bottom: 30px;
   margin-top: 15px;
 }
+
 .login-face a{
   color: #006add;
   font-size: 18px;
